# PE-Hackathon-Project

./: .env.example  .gitignore  Dockerfile  FAILURE_MODES.md  README.md  docker-compose.1gb.yml  docker-compose.local.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  run.py  setup-swap.sh
.github/workflows/: ci-cd.yml  test.yml
app/: __init__.py  cache.py  seed.py  utils.py
app/models/: event.py  url.py
app/routes/: __init__.py  events.py  frontend.py  stats.py  urls.py  users.py
app/templates/: base.html  index.html
app/templates/urls/: detail.html  list.html  new.html
app/templates/users/: detail.html  list.html
db-init/: 01-replication-user.sql  02-configure-hba.sh
docs/: architecture.md  capacity.md  configuration.md  decisions.md  deploy.md  runbooks.md  troubleshooting.md
load_tests/k6/: bronze.js  gold.js  silver.js
load_tests/locust/: locustfile.py
monitoring/: README.md  alert_rules.yml  alertmanager.yml  dashboards.yml  prometheus.yml
monitoring/dashboards/: golden_signals.json
monitoring/provisioning/dashboards/: dashboards.yml
monitoring/provisioning/datasources/: prometheus.yml
nginx/: nginx.conf
scripts/: .env.local.example  README.md  chaos.sh  garbage.sh  manage.sh  purge-secrets.sh
tests/integration/: conftest.py  test_extra.py  test_routes.py  test_users.py
tests/unit/: test_seed.py  test_utils.py
